{
    "name": "CustomizableControls",
    "maps": [
        {
            "name": "Camera",
            "id": "dbdd27fc-8563-4697-8b4a-0479901edf62",
            "actions": [
                {
                    "name": "RotateCameraToRight",
                    "type": "Button",
                    "id": "0950f91e-a717-4ba6-b0e4-b49e33e2de92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCameraToLeft",
                    "type": "Button",
                    "id": "6465f1fa-1836-4f32-9edd-f43f3a497c8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7c2cdda4-b7ab-4517-93af-e64edf22ee6a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraToRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0450a053-ecea-4fa4-8ca3-098240bef006",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraToRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd46edd9-86a7-43d6-9862-c873f21373ae",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraToLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a45c62e8-0ec3-4e2c-9c67-0ddf028f74e4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCameraToLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HUD",
            "id": "f60d480c-03b8-4d5d-80f6-9fe2c5e8c6c0",
            "actions": [
                {
                    "name": "OpenCloseInventory",
                    "type": "Button",
                    "id": "cb9bbd51-39f8-485b-b387-9ed26fb853dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenCloseEquipment",
                    "type": "Button",
                    "id": "90f2e322-4d48-4396-b447-575dd0067fbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenCloseQuestLog",
                    "type": "Button",
                    "id": "6f9cde93-4d17-4153-8cef-bf0e455b1644",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenCloseSkills",
                    "type": "Button",
                    "id": "e99ecaf7-e073-45a8-9b3c-dab086110313",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenCloseStats",
                    "type": "Button",
                    "id": "762aa9c8-eeff-42a1-a76c-60e8b36a2e9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f00ec765-f14e-44f1-9208-adfb04ac3c66",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d136e6e5-637f-487c-8eeb-648e2c71bb5c",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4955ef52-ea66-4aed-a521-8d4679270d67",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseEquipment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac7f55e8-73e5-4ba0-9695-c4c7a4d596db",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseEquipment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fc35b8e-b0e4-4372-9cea-ce9cfb037ca6",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseQuestLog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2507301f-82d7-41d8-8462-177765e3d93e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseQuestLog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59da02fa-a7ee-4088-9fee-f7072369e4b3",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseSkills",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4dc296a2-c119-42be-a1c5-3a6ead3e6686",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseSkills",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d9426c6-c1f0-4d25-b7df-f79c62883561",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseStats",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a136729-9480-4205-ac82-97cf08056d55",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseStats",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}